--- a/jade_partials/dashboard.html.jade
+++ b/jade_partials/dashboard.html.jade
@@ -1,27 +1,30 @@
 .animation_wrapper.layer0
+  .module_wrapper(ng-if='new_mode')
+    .module_fader(ng-click='toggleNewMode()')
+    form.module(ng-if='new_mode', ng-submit='createCampaign(new_campaign_title, handle_to_submit, is_local, new_campaign_locale, discoverable)')
+      div.content_wrapper
+        label(for='handle_select') Choose a handle
+        button.btn.push_right(ng-click='toggle_new_handle = true', type='button') + new handle
+        select#handle_select(ng-model='handle_to_submit', ng-options='handleObj.handle as handleObj.handle for handleObj in handleList')
+        div(ng-if='toggle_new_handle', ng-animate='\'collapse\'')
+          label(for='handle_text') New handle name:
+          input#handle_text.inline(type='text', name='new_handle', placeholder='Try your twitter handle!', ng-model='handle_to_submit')
+        label(for='campaign_text') Name this campaign:
+          br
+          small (this is the public title for your feedback.)
+        input#campaign_text(type='text', name='new_campaign_title', placeholder='eg. \'Crepes & Things Feedback\'', ng-model='new_campaign_title')
+      .btnset.two_btns
+        button.btn(ng-click='toggleNewMode()', type='button') cancel
+        button.btn.positive(type='submit', ng-click='resetStep()') Continue
   header.app_header
     button.btn.icon.left(ng-click='toggleSidebar(\'right\')')
       i.icon-menu
-    h1
+    h1.center
       | @
       span(ng-bind='handle')
-    button.btn.primary(ng-click='edit_mode || toggleNewMode()', ng-if='!new_mode', ng-hide='edit_mode', ng-class='{disabled: edit_mode}') +
+    button.btn.right.icon(ng-click='edit_mode || toggleNewMode()', ng-if='!new_mode', ng-hide='edit_mode', ng-class='{disabled: edit_mode}') +
   .scroller_wrapper.with_header_padding
     section.scroller
-      div(ng-if='new_mode')
-        form(ng-submit='createCampaign(new_campaign_title, handle_to_submit, is_local, new_campaign_locale, discoverable)')
-          label(for='handle_select') Choose a handle
-          select#handle_select(ng-model='handle_to_submit', ng-options='handleObj.handle as handleObj.handle for handleObj in handleList')
-          button.btn(ng-click='toggle_new_handle = true', type='button') + new handle
-          div(ng-if='toggle_new_handle', ng-animate='\'collapse\'')
-            label(for='handle_text') New handle name:
-            input#handle_text.inline(type='text', name='new_handle', placeholder='Try your twitter handle!', ng-model='handle_to_submit')
-          label(for='campaign_text') Name this campaign:
-            br
-            small (this is the public title for your feedback.)
-          input#campaign_text(type='text', name='new_campaign_title', placeholder='eg. \'Crepes & Things Feedback\'', ng-model='new_campaign_title')
-          button.btn(type='submit', ng-click='resetStep()') Continue
-          button.btn(ng-click='toggleNewMode()', type='button') cancel
       div(ng-show='duplicating_mode')
         form(ng-submit='duplicateCampaign(temp_name, temp_handle)')
           label(for='handle_select_duplicate') Choose a handle
@@ -50,8 +53,10 @@
             small @{{campaign.handle}}
             h2 {{campaign.title}}
       .dashboard_toolbar(ng-if='edit_mode')
-          //a.btn(href='{{edit_link}}', ng-class='{disabled: disable_single_edit_buttons}') edit
-          a.btn(href='{{view_link}}', ng-class='') view
-          button.btn(ng-class='{disabled: disable_single_edit_buttons}', ng-click='disable_single_edit_buttons || archiveListItem(selected_campaigns, campaignList)') archive
-          button.btn(ng-class='{disabled: disable_single_edit_buttons}', ng-click='disable_single_edit_buttons || duplicateMode(true, selected_campaigns)') duplicate
+          .button_item
+            a.btn(href='{{view_link}}', ng-class='') view
+          .button_item
+            button.btn(ng-class='{disabled: disable_single_edit_buttons}', ng-click='disable_single_edit_buttons || archiveListItem(selected_campaigns, campaignList)') archive
+          .button_item
+            button.btn(ng-class='{disabled: disable_single_edit_buttons}', ng-click='disable_single_edit_buttons || duplicateMode(true, selected_campaigns)') duplicate
       
