--- a/partials/analytics.html
+++ b/partials/analytics.html
@@ -1,1 +1,7 @@
-<div class="animation_wrapper"><header class="app_header"><button ng-click="toggleSidebar('right')" class="btn icon left"><i class="icon-menu"></i></button><button ng-click="toggleNavbar()" class="btn icon right"> . . . </button><h1 ng-bind="title"></h1></header><div ng-include="ng-include" src="'partials/campaign_nav.html'"></div><div class="scroller_wrapper with_header_padding"><section class="scroller">Ah, but there is nothing here. C'est un traviste.</section></div></div>
+
+<div class="animation_wrapper">
+  <div ng-include src="'partials/campaign_nav.html'"></div>
+  <div class="scroller_wrapper with_header_padding">
+    <section class="scroller">Ah, but there is nothing here. C'est un traviste.</section>
+  </div>
+</div>
