--- a/partials/campaign_contacts.html
+++ b/partials/campaign_contacts.html
@@ -1,18 +1,11 @@
+
 <div class="animation_wrapper">
-  <header class="app_header">
-    <button ng-click="toggleSidebar('right')" class="btn icon left"><i class="icon-menu"></i></button>
-    <button class="btn icon right" ng-click="toggleNavbar()"> . . . </button>
-    <h1 ng-bind="title"></h1>
-  </header>
-  
   <div class="scroller_wrapper with_header_padding">
     <section class="scroller">
-          
       <input type="text" ng-model="search_query" placeholder="search names or seacret codes"/>
       <ul class="object_list">
-        <li ng-repeat="contact in contactList | filter:search_query">
-          <a href="#/account/{{accountId}}/campaign/{{campaignId}}/contacts/{{contact.id}}"><h2 ng-bind="contact.name"></h2></a>
-        </li>
+        <li ng-repeat="contact in contactList | filter:search_query"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/contacts/{{contact.id}}">
+            <h2 ng-bind="contact.name"></h2></a></li>
       </ul>
     </section>
   </div>
