--- a/partials/edit.html
+++ b/partials/edit.html
@@ -1,135 +1,79 @@
-<aside id="palette" view="panel">
-  <div ng-include src="'partials/panel.html'"></div>
-</aside>
 
-<section id="page_02" class="animation_wrapper">
-  <header class="app_header">
-    <a href="#/account/{{accountId}}/campaign/{{buildCampaign.id}}/conversations" class="btn icon left"><i class="icon-left-open"></i>cancel</a>
-    <a ng-click='advanceStep()' ng-hide='currentStep >= (steps.length-1)' class="btn right">next<i class="icon-right-open"></i></a>
-    <button ng-show='currentStep >= (steps.length-1)' class="btn right" ng-click="saveChanges()">Save Changes</button>
-    <h2>Edit {{buildCampaign.title}}: Step {{steps[currentStep]+1}}</h2>
-  </header>
-  
-  <div class="scroller_wrapper with_header_padding extra">
-    <nav>
-      <ol class="breadcrumbs five_btns btnset">
-        <li ng-class="{selected: currentStep==n}" class="crumb btn" ng-repeat='n in steps' ng-click='changeStep(n)'>{{n+1}}</li>
+<aside id="palette" view="panel">
+  <div ng-include src="&quot;partials/panel.html&quot;"></div>
+</aside>
+<section class="animation_wrapper">
+  <div class="scroller_wrapper with_breadcrumb_padding">
+    <nav class="breadcrumbs"><a href="#/account/{{accountId}}/campaign/{{buildCampaign.id}}/conversations" ng-show="currentStep==0" class="btn soft left"><i class="icon-cancel"></i></a>
+      <button ng-click="retreatStep()" ng-show="currentStep&gt;=1" class="btn soft left"><i class="icon-left-open"></i></button>
+      <h2>Step {{steps[currentStep]+1}}</h2>
+      <ol class="dots right">
+        <li ng-class="{selected: currentStep==n}" ng-repeat="n in steps" ng-click="changeStep(n)" class="dot"></li>
       </ol>
+      <button ng-click="advanceStep()" ng-hide="currentStep== (steps.length-1)" class="btn soft right">next</button>
+      <button ng-show="currentStep==(steps.length-1)" ng-click="saveChanges()" class="btn soft right">Save Changes</button>
     </nav>
     <div class="scroller">
       <div class="card">
         <h2 ng-bind="buildCampaign.title"></h2>
         <h3 ng-bind="buildCampaign.handle"></h3>
-        <section ng-switch on='currentStep'>
-            <div ng-switch-when='0'>
-              <label for="image">Upload image:</label>
-              <input type="file" id="image" name="image" accept="image/*" />
-              <div ng-include src="'partials/form_not_completed.html'"></div>
-              <button ng-click="togglePanel('Create Question')" class="btn">+ New Question</button>
-            </div>
-          <div ng-switch-when='1'>
+        <section ng-switch="currentStep">
+          <div ng-switch-when="0">
+            <!-- label(for='image') Upload image:-->
+            <!-- input#image(type='file', name='image', accept='image/*')-->
+            <div ng-include src="&quot;partials/form_not_completed.html&quot;"></div>
+            <button ng-click="togglePanel('Create Question')" class="middle confirm btn">+ New Question</button>
+          </div>
+          <div ng-switch-when="1">
             <form method="post" action="">
-              
               <h3>Reward details:</h3>
-              
               <label for="personal_message" ng-model="buildCampaign.message">Create a personal message for the recipient:</label>
               <textarea id="personal_message" placeholder="(optional)"></textarea>
-              
               <label for="title">Title:</label>
-              <input type="text" name="title" ng-model="buildCampaign.reward.title" placeholder="Gift Title" />
-              
-<!--              <label for="description">Description:</label>
-              <input type="text" name="description" ng-model="buildCampaign.reward.description" placeholder="Description"/>-->
-              
+              <input type="text" name="title" ng-model="buildCampaign.reward.title" placeholder="Gift Title"/>
+              <input/>
               <label for="terms">Terms:</label>
               <input type="text" name="terms" ng-model="buildCampaign.reward.terms" placeholder="Terms and Conditions"/>
-              
               <label for="date">Expiration Date:</label>
-              <input type="date" name="expiration" ng-model="buildCampaign.reward.exp" placeholder="Expiration Date" />
-            
-              <!--<h3>How will this reward be redeemed?</h3>
-              <div>
-                <fieldset>
-                  <input ng-model="reward_type" type="radio" name="reward_type" value="location" id="location_redemption"/>
-                  <label for="location_redemption">location redemption <small>(User receives a code when they choose to redeem. They will have 10mins to present a code to you or an associate. You will also be able to manually redeem these rewards, in case of technical difficulties.)</small></label>
-                </fieldset>
-                
-                <fieldset>
-                  <input ng-model="reward_type" type="radio" name="reward_type" value="email" id="email_redemption"/>
-                  <label for="email_redemption">through email <small>(Prompts user for their email address. You get it, reward automatically gets sent.)</small></label>
-                </fieldset>
-                
-                <fieldset>
-                  <input ng-model="reward_type" type="radio" name="reward_type" value="mail" id="mail_redemption"/>
-                  <label for="mail_redemption">mailed to address <small>(Asks user for their mailing address. The rest is up to you!)</small></label>
-                </fieldset>
-                
-                <fieldset>
-                  <input ng-model="reward_type" type="radio" name="reward_type" value="basic_text" id="basic_text"/>
-                  <label for="basic_text">Basic text <small>(Free text to do what you want. Could be a code for your own system, a link to a website, go wild!)</small></label>
-                </fieldset>
-                
-                <fieldset>
-                  <label for="basic_text_message">Message for the recipient:</label>
-                  <textarea placeholder="Put your message, along with any other instructions for redeeming this reward here. This includes any external links, or coupon codes."></textarea>
-                </fieldset>
-                
-              </div>-->
-            
+              <input type="date" name="expiration" ng-model="buildCampaign.reward.exp" placeholder="Expiration Date"/>
               <h3>Validity:</h3>
-            
               <div>
-              
                 <label for="title">Start Date:</label>
-                <input type="date" name="start_date" ng-model="buildCampaign.reward.start_date" placeholder="" />
+                <input type="date" name="start_date" ng-model="buildCampaign.reward.start_date" placeholder=""/>
                 <label for="title">Start Time:</label>
-                <input type="time" name="start_time" ng-model="buildCampaign.reward.start_time" placeholder="" />
-                
+                <input type="time" name="start_time" ng-model="buildCampaign.reward.start_time" placeholder=""/>
                 <label for="title">End Date:</label>
-                <input type="date" name="end_date" ng-model="buildCampaign.reward.end_date" placeholder="" />
+                <input type="date" name="end_date" ng-model="buildCampaign.reward.end_date" placeholder=""/>
                 <label for="title">End Time:</label>
-                <input type="time" name="end_time" ng-model="buildCampaign.reward.end_time" placeholder="" />
-              
-                <input class="inline" type="checkbox" name="delay" id="delay"/>
-                <label class="inline" for="delay">24-hour delay <small>(user must wait 24 hours before redeeming.)</small></label>
-                
+                <input type="time" name="end_time" ng-model="buildCampaign.reward.end_time" placeholder=""/>
+                <input id="delay" type="checkbox" name="delay" class="inline"/>
+                <label for="delay" class="inline">24-hour delay<small>(user must wait 24 hours before redeeming.)</small></label>
               </div>
-            
-            
               <h3>Sharability:</h3>
-              
               <div>
-                
                 <fieldset>
-                  <input class="inline" ng-model="sharability" type="radio" name="sharability" ng-true-value="not_sharable" id="not_sharable"/>
-                  <label class="inline" for="not_sharable">not sharable </label>
+                  <input id="not_sharable" ng-model="sharability" type="radio" name="sharability" ng-true-value="not_sharable" class="inline"/>
+                  <label for="not_sharable" class="inline">not sharable </label>
                 </fieldset>
-                
                 <fieldset>
-                  <input class="inline" ng-model="sharability" type="radio" name="sharability" ng-true-value="sharable_three" id="sharable_three"/>
-                  <label class="inline" for="sharable_three">three times<small>(User may share this reward with up to three (3) contacts.)</small></label>
+                  <input id="sharable_three" ng-model="sharability" type="radio" name="sharability" ng-true-value="sharable_three" class="inline"/>
+                  <label for="sharable_three" class="inline">three times<small>(User may share this reward with up to three (3) contacts.)</small></label>
                 </fieldset>
-                
                 <fieldset>
-                  <input class="inline" ng-model="sharability" type="radio" name="sharability" ng-true-value="sharable_any" id="sharable_any"/>
-                  <label class="inline" for="sharable_any">openly sharable<small>(This reward can be shared freely through any means (blogs, social networks, email, etc.)</small></label>
+                  <input id="sharable_any" ng-model="sharability" type="radio" name="sharability" ng-true-value="sharable_any" class="inline"/>
+                  <label for="sharable_any" class="inline">openly sharable<small>(This reward can be shared freely through any means (blogs, social networks, email, etc.)</small></label>
                 </fieldset>
-                
               </div>
-              
             </form>
-            
           </div>
-          
-          <div ng-switch-when='2'>
+          <div ng-switch-when="2">
             <ul>
               <li>Facebook Account<small class="status">connected</small></li>
               <li>Twitter Account<small class="status">connected</small></li>
             </ul>
-            <button class="btn" ng-click="togglePanel('social_accounts')">Add new media account</button>
+            <button ng-click="togglePanel('social_accounts')" class="btn">Add new media account</button>
           </div>
-          
-          <div ng-switch-when='3'>
+          <div ng-switch-when="3">
             <form ng-submit="sendInvite(first, last, invite_email, level, buildCampaign.permissions.pending)">
               <h3>Send email invitations to others to help manage this campaign.</h3>
               <label for="name">Full Name:</label>
@@ -141,98 +85,82 @@
               <div>
                 <label>Permission level:</label>
                 <fieldset class="inline">
-                  <input ng-model="perm_respond" type="checkbox" name="perm_respond" ng-true-value="respond" id="perm_respond"/>
+                  <input id="perm_respond" ng-model="perm_respond" type="checkbox" name="perm_respond" ng-true-value="respond"/>
                   <label for="perm_respond">view only</label>
                 </fieldset>
-                
                 <fieldset class="inline">
-                  <input ng-model="perm_export" type="checkbox" name="perm_export" ng-true-value="export" id="perm_export"/>
+                  <input id="perm_export" ng-model="perm_export" type="checkbox" name="perm_export" ng-true-value="export"/>
                   <label for="perm_export">respond</label>
                 </fieldset>
-                
                 <fieldset class="inline">
-                  <input ng-model="perm_admin" type="checkbox" name="perm_admin" ng-true-value="admin" id="perm_admin"/>
+                  <input id="perm_admin" ng-model="perm_admin" type="checkbox" name="perm_admin" ng-true-value="admin"/>
                   <label for="perm_admin">admin + export</label>
                 </fieldset>
-                
               </div>
               <button class="new_invite btn">Send</button>
             </form>
-            <hr>
+            <hr/>
             <h2>Permissions set:</h2>
             <ul>
-              <li ng-repeat="person in buildCampaign.permissions.accepted">
-                {{person.first}} {{person.last}} <small class="status">permission level: {{person.level}}</small><button class="btn right" ng-click="deleteListItem($index, buildCampaign.permissions.accepted)">revoke</button>
-              
+              <li ng-repeat="person in buildCampaign.permissions.accepted">{{person.first}} {{person.last}}<small class="status">permission level: {{person.level}}</small>
+                <button ng-click="deleteListItem($index, buildCampaign.permissions.accepted)" class="btn right">revoke</button>
                 <div>
                   <label>change permissions:</label>
                   <fieldset class="inline">
-                    <input ng-model="person.level" type="checkbox" name="perm_respond" ng-true-value="respond" id="perm_respond"/>
+                    <input id="perm_respond" ng-model="person.level" type="checkbox" name="perm_respond" ng-true-value="respond"/>
                     <label for="perm_respond">view only</label>
                   </fieldset>
-                  
                   <fieldset class="inline">
-                    <input ng-model="person.level" type="checkbox" name="perm_export" ng-true-value="respond" id="perm_export"/>
+                    <input id="perm_export" ng-model="person.level" type="checkbox" name="perm_export" ng-true-value="respond"/>
                     <label for="perm_export">respond</label>
                   </fieldset>
-                  
                   <fieldset class="inline">
-                    <input ng-model="person.level" type="checkbox" name="perm_admin" ng-true-value="admin" id="perm_admin"/>
+                    <input id="perm_admin" ng-model="person.level" type="checkbox" name="perm_admin" ng-true-value="admin"/>
                     <label for="perm_admin">admin + export</label>
                   </fieldset>
-                  
                 </div>
               </li>
             </ul>
             <h2>Pending Invites:</h2>
             <ul>
-              <li ng-repeat="person in buildCampaign.permissions.pending">
-                {{person.first}} {{person.last}} ({{person.email}}, {{person.level}}) <small class="status">pending...</small><button class="btn right clear">resend</button><button class="btn right" ng-click="deleteListItem($index, buildCampaign.permissions.pending)">cancel</button>
+              <li ng-repeat="person in buildCampaign.permissions.pending">{{person.first}} {{person.last}} ({{person.email}}, {{person.level}})<small class="status">pending...</small>
+                <button class="btn right clear">resend</button>
+                <button ng-click="deleteListItem($index, buildCampaign.permissions.pending)" class="btn right">cancel</button>
               </li>
             </ul>
           </div>
-          
-          <div ng-switch-when='4'>
-            
+          <div ng-switch-when="4">
             <div>
               <h3>Security:</h3>
               <fieldset class="inline">
                 <input type="checkbox"/>
                 <label>public</label>
               </fieldset>
-              
               <fieldset class="inline">
                 <input type="checkbox"/>
                 <label>private</label>
               </fieldset>
-              
               <fieldset class="inline">
                 <input type="checkbox"/>
                 <label>passphrase protected</label>
               </fieldset>
-              
             </div>
-            
             <div>
-              <input ng-model="buildCampaign.discoverable" type="checkbox" class="inline" id="discoverable"/>
+              <input id="discoverable" ng-model="buildCampaign.discoverable" type="checkbox" class="inline"/>
               <label for="discoverable" class="inline">location discoverable?</label>
             </div>
-            
-            
             <div ng-show="buildCampaign.discoverable">
               <ol>
                 <li ng-repeat="location in buildCampaign.locationsList">
                   <p ng-bind="location.text"></p>
                 </li>
               </ol>
-              
               <form ng-submit="addLocation(addLocation_address.text, buildCampaign.locationsList)" ng-model="addLocation_form" name="addLocation_form">
                 <label for="url">Add an address to your campaign (optional):</label>
-                <input ng-model="addLocation_address.text" type="text" name="addLocation_address" id="addLocation_address" placeholder="1 Street Address, Whereverville, FL"/>
+                <input id="addLocation_address" ng-model="addLocation_address.text" type="text" name="addLocation_address" placeholder="1 Street Address, Whereverville, FL"/>
                 <button class="btn">+ location</button>
               </form>
             </div>
-            
           </div>
         </section>
       </div>
