--- a/jade_partials/dashboard.html.jade
+++ b/jade_partials/dashboard.html.jade
@@ -23,7 +23,7 @@
       | @
       span(ng-bind='handle')
     button.btn.right.icon(ng-click='edit_mode || toggleNewMode()', ng-if='!new_mode', ng-hide='edit_mode', ng-class='{disabled: edit_mode}') +
-  .scroller_wrapper.with_header_padding
+  .scroller_wrapper
     section.scroller
       div(ng-show='duplicating_mode')
         form(ng-submit='duplicateCampaign(temp_name, temp_handle)')
