--- a/partials/dashboard.html
+++ b/partials/dashboard.html
@@ -25,7 +25,7 @@
     <h1 class="center">@<span ng-bind="handle"></span></h1>
     <button ng-click="edit_mode || toggleNewMode()" ng-if="!new_mode" ng-hide="edit_mode" ng-class="{disabled: edit_mode}" class="btn right icon">+</button>
   </header>
-  <div class="scroller_wrapper with_header_padding">
+  <div class="scroller_wrapper">
     <section class="scroller">
       <div ng-show="duplicating_mode">
         <form ng-submit="duplicateCampaign(temp_name, temp_handle)">
